--- a/plugins/editor/design/settings.css
+++ b/plugins/editor/design/settings.css
@@ -1,7 +1,6 @@
 .forceWysiwyg {
   opacity: 1;
-  -webkit-transition: all 0.3s ease;
-          transition: all 0.3s ease; }
+  transition: all 0.3s ease; }
 
 .forceWysiwygDisabled {
   opacity: 0;
